♻️ refactor: 코드리뷰 참고하여 수정
- RestaurantController findOk() 수정
- 전체 조회 메서드명 getAllRestaurant로 수정
- Restaurant 전화번호 @Pattern 추가
- Restaurant 엔티티 picture -> imageUrl로 수정
- RestaurantResponseDto static 메서드로 수정
- RestaurantService 레스토랑 찾기 중복 코드 repository에서 디폴트 메서드로 추가 변경
- RestaurantService 리스트 조회 .toList()로 변경
- GlobalExceptionHandler 오타 수정
- 빌더 패턴 줄바꿈 수정
- 조회 부분 transactional readOnly=true 수정
- Restaurant 엔티티 전화번호 필드명 phoneNumber로 수정